results/SVCOMP/0-shot/log-assert6-2024_03_18_23_24_44.txt
import java.util.Random;

class assert6 {
  //@ ensures (\result >= 0 && \result < 1000);
  public static void func() {
    int i = new Random().nextInt();

    if (i >= 1000) {
      //@ assert !(i >= 1000);
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\result >= 0 && \result < 1000);
                ^
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\result >= 0 && \result < 1000);
                                ^
2 errors

